20342 partial update dina repo wipes relationship
second iteration of solution using a no tracking solution, this is optimal to avoid thread safety risks